--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "jsmaker",
   "version": "1.0.0",
   "description": "",
-  "main": "nodemon app.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/clairehuang1/jsmaker/issues"
   },
-  "homepage": "https://github.com/clairehuang1/jsmaker#readme"
+  "homepage": "https://github.com/clairehuang1/jsmaker#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "mongoose": "^4.9.5",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
+  }
 }
