--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "fs": "0.0.1-security",
     "handlebars": "^4.0.6",
     "hbs": "^4.0.1",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.2.1",
+    "jsdom": "^10.1.0",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
