--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "webpack-dev-server --inline --hot",
+    "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +20,17 @@
   "homepage": "https://github.com/clairehuang1/jsmaker#readme",
   "dependencies": {
     "aws-sdk": "^2.48.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
+    "ejs": "^2.5.6",
+    "express": "^4.14.1",
     "express-session": "^1.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fs": "0.0.1-security",
     "handlebars": "^4.0.6",
     "hbs": "^4.0.1",
@@ -34,6 +41,25 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "underscore": "^1.8.3"
+    "react": "^15.3.2",
+    "react-cookie": "^2.0.6",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.6.1",
+    "react-router-dom": "^4.1.1",
+    "underscore": "^1.8.3",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "http-server": "^0.9.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.17.0"
   }
 }
