--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^15.3.2",
     "react-router": "^2.6.1",
     "react-router-dom": "^4.1.1",
+    "reactcss": "^1.2.2",
     "underscore": "^1.8.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
